--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.6/bin/python3.6"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.6/bin/python3.6",
+    "python.linting.pylintArgs": [
+        "--init-hook",
+        "import sys; sys.path.append('${workspaceFolder}/roadtools')"
+    ],
+    "python.envFile": "${workspaceFolder}/.vscode/env"
 }
