Added support for multisheet cropping, but in ECW (big files) I need to call gdal_ tools to do the work, due a big memory consumption (24 GB). Need to rewite some things in the mapdbmanager interface to choose when to call gdal, or doing it with python

--- a/raster/gdal.env
+++ b/raster/gdal.env
@@ -3,5 +3,5 @@ export QGIS=/Applications/QGIS3.12.app/Contents
 SITE_PACKAGES=$QGIS/Frameworks/Python.framework/Versions/Current/lib/python3.7/site-packages
 PYTHON_PACKAGES=/usr/local/lib/python3.7/site-packages
 export GDAL_DRIVER_PATH=$QGIS/Resources/gdal/gdalplugins
-export GDAL_DATA=$QGIS/Contents/Resources/gdal
+export GDAL_DATA=$QGIS/Resources/gdal
 export PYQGIS37=$QGIS/Frameworks/Python.framework/Versions/Current/bin/python3.7
